--- a/app/src/main/res/layout/view_count_down.xml
+++ b/app/src/main/res/layout/view_count_down.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/textView"
-        android:text="clickMeToStartCountDown"
-        android:textSize="20sp"
-        android:textColor="#000000"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/textView"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/click_remind"
+    android:textColor="#000000"
+    android:textSize="20sp"/>
 
-</FrameLayout>
